@@ -3,11 +3,12 @@
   <title metal:fill-slot="title" tal:content="view/title" />
 </head>
 <body>
+
 <h1 metal:fill-slot="content-header" tal:content="view/title" />
+
 <metal:block metal:fill-slot="body">
-<tal:block replace="structure provider:schooltool.ReportLinks" />
+  <tal:block replace="structure provider:schooltool.ReportLinks" />
 </metal:block>
+
 </body>
 </html>
-
-
